2014-07-23  Ryuan Choi  <ryuan.choi@samsung.com>

        [EFL] Do not generate forwarding header for ewk headers
        https://bugs.webkit.org/show_bug.cgi?id=135147

        Reviewed by Gyuyoung Kim.

        Only EWebKit2.h and ewk_text_checker.h are generated as forwarding header.
        This is unnecessary.

        * UIProcess/API/efl/tests/UnitTestUtils/EWK2UnitTestBase.h:
        * UIProcess/API/efl/tests/test_ewk2_application_cache_manager.cpp:
        * UIProcess/API/efl/tests/test_ewk2_context_menu.cpp:
        * UIProcess/API/efl/tests/test_ewk2_window_features.cpp:
        * UIProcess/efl/TextCheckerClientEfl.h:

2014-07-22  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r171366.
        https://bugs.webkit.org/show_bug.cgi?id=135190

        Broke three API tests (Requested by ap on #webkit).

        Reverted changeset:

        "REGRESSION (r171239): Much more time spent taking snapshots
        during the PLT"
        https://bugs.webkit.org/show_bug.cgi?id=135177
        http://trac.webkit.org/changeset/171366

2014-07-22  Oliver Hunt  <oliver@apple.com>

        Reduce the size of the root WebContent sandbox profile
        https://bugs.webkit.org/show_bug.cgi?id=135182
        <rdar://problem/17739108>

        Reviewed by Alexey Proskuryakov.

        Switch from apple-ui-app to uikit-app as the root of the webcontent
        profile.

        * Resources/SandboxProfiles/ios/com.apple.WebKit.WebContent.sb:

2014-07-22  Jinwoo Song  <jinwoo7.song@samsung.com>

        Unreviewed build fix on EFL port after r171356.

        Implement a dummy platformMediaCacheDirectory() to avoid undefined reference error.

        * UIProcess/efl/WebContextEfl.cpp:
        (WebKit::WebContext::platformMediaCacheDirectory):

2014-07-22  Enrica Casucci  <enrica@apple.com>

        REGRESSION (WebKit2): Selection inside accelerated overflow:scroll doesn't track scrolling.
        https://bugs.webkit.org/show_bug.cgi?id=135180